k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: k8s-devops-service
spec:
  type: ClusterIP
  selector:
    app: k8s-devops-app
  ports:
    - port: 80
      targetPort: 9090
      nodePort: 30007
